test_suite/alan-2022-examples/failing/004220_mutation.alan
source EIq begin leave / not xd end
